2007-07-13  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/helpers/rdf_helper.rb (RdfHelper::{rdf,rss2}_parts*): New method to share for rdf and rss.
	* donrails/app/views/rdf/*.rxml: Change to use these.

2007-07-12  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/don_attachment.rb (DonAttachment::update_attachment_attributes): Remove push_with_attributes. 

	* donrails/app/controllers/admin/article_controller.rb: Cleanup.

	* donrails/app/apis/movable_type_service.rb (MovableTypeService::setPostCategories): Remove push_with_attributes. 

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::bind_article_category): Remove push_with_attributes.

	* donrails/app/views/rdf/rdf_enrollment.rxml: likewise.

	* donrails/app/views/rdf/rdf_category.rxml: likewise.

	* donrails/app/views/rdf/rdf_search.rxml: likewise.

	* donrails/app/views/rdf/rdf_article.rxml: likewise.

	* donrails/app/views/rdf/rdf_recent.rxml: Remove <copyright> and <trackback>. Change <category> to <dc:subject>.

	* donrails/app/views/rdf/rss2_search.rxml: likewise.

	* donrails/app/views/rdf/rss2_enrollment.rxml: likewise.

	* donrails/app/views/rdf/rss2_category.rxml: likewise.

	* donrails/app/views/rdf/rss2_article.rxml: likewise.

	* donrails/app/views/rdf/rss2_recent.rxml: Add <guid>.

2007-07-11  ARAKI Yasuhiro  <yasu@debian.or.jp>

	** uncompatible change ** in 1.6.9.8 
	* *** CHANGE *** to use from habtm to has_many :through. Please 'rake db:migrate'
	* donrails/test/unit/don_attachment_test.rb (DonAttachmentTest): Change for it.
	* donrails/test/unit/don_ping_test.rb (DonPingTest): Chaange for it.
	* donrails/test/integration/login_story_test.rb (LoginStoryTest): Change for it.
	* donrails/test/fixtures/dona_cas.yml: Rename from categories_articles.yml.
	* donrails/test/fixtures/dona_daas.yml: Rename from don_attachments_articles.yml.
	* donrails/app/models/category.rb (Category): Change for it.
	* donrails/app/models/article.rb 
	(DonaCa): New class.