@@ -10,7 +10,19 @@
 =end
 
 require 'cgi'
-require 'htree'
+pt = nil
+begin
+  require 'hpricot'
+  pt = 'hpricot'
+rescue Exception
+  begin
+    require 'htree'
+    pt = 'htree'
+  rescue Exception
+    raise 
+  end
+end
+raise unless pt 
 
 module DonRails
 
@@ -67,8 +79,12 @@ module DonRails
     def body_to_xml
       begin
         bth = '<html><body>' + self.body_to_html + '</body></html>'
-        xml = HTree.parse(bth).to_rexml
-        return xml.to_s.gsub('&nbsp;','')
+        if pt == 'hpricot'
+          return Hpricot.XML(bth).gsub('&nbsp;','')
+        elsif pt == 'htree'
+          xml = HTree.parse(bth).to_rexml
+          return xml.to_s.gsub('&nbsp;','')
+        end
       rescue
         return self.to_s.gsub('&nbsp;','')
       end
