@@ -10,6 +10,19 @@
 
 require 'cgi'
 require '../delegator' if $0 == __FILE__
+pt = nil
+begin
+  require 'hpricot'
+  pt = 'hpricot'
+rescue Exception
+  begin
+    require 'htree'
+    pt = 'htree'
+  rescue Exception
+    raise 
+  end
+end
+raise unless pt 
 
 =begin rdoc
 
@@ -386,8 +399,12 @@ module DonRails
     def body_to_xml
       begin
         bth = '<html><body>' + self.body_to_html + '</body></html>'
-        xml = HTree.parse(bth).to_rexml
-        return xml.to_s
+        if pt == 'hpricot'
+          return Hpricot.XML(bth)
+        elsif pt == 'htree'
+          xml = HTree.parse(bth).to_rexml
+          return xml.to_s
+        end
       rescue
         p $!
         return self.body_to_html
